--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -95,9 +95,10 @@
     "from pyDataverse.models import Dataverse\n",
     "\n",
     "# Provide input values\n",
-    "doi = \"\"  # @param {type:\"string\"}  \n",
+    "identifier = \"\"  # @param {type:\"string\"}  \n",
     "token = \"\"  # @param {type:\"string\"}  \n",
     "base_url = \"https://dataverse.csuc.cat/\" # @param {type:\"string\"}\n",
+    "doi = identifier\n",
     "\n",
     "def extract_value(data_dict):\n",
     "    \"\"\"\n",
