--- a/move_dataset/move_dataset_script.ipynb
+++ b/move_dataset/move_dataset_script.ipynb
@@ -109,9 +109,10 @@
     "        print(\"Dataset move operation failed.\")\n",
     "\n",
     "# Provide input values DOI , TOKEN and ALIAS\n",
-    "doi = \"\"    # @param {type:\"string\"} \n",
+    "identifier = \"\"    # @param {type:\"string\"} \n",
     "token = \"\"  # @param {type:\"string\"} \n",
     "alias = \"\"  # @param {type:\"string\"} \n",
+    "doi = identifier \n",
     "\n",
     "# Move the dataset\n",
     "move_dataset(token, doi, alias)\n"
