--- a/extract_metadata/extract_metadata_script.ipynb
+++ b/extract_metadata/extract_metadata_script.ipynb
@@ -52,10 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4HggBp-shqZi",
    "metadata": {
-    "cellView": "form",
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 106,
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dccbe3e8",
    "metadata": {
     "cellView": "form",
@@ -177,6 +176,7 @@
     }
    ],
    "source": [
+    "# @title Enter DOI (doi:10.34810/dataXXX), API token and the repository URL. Click the &#x25B6; button to execute cell\n",
     "from IPython.display import display, FileLink\n",
     "try:\n",
     "    from google.colab import files\n",
@@ -190,10 +190,10 @@
     "import pandas as pd\n",
     "\n",
     "# Provide input values\n",
-    "doi = \"\"  # @param {type:\"string\"}\n",
+    "identifier = \"\"  # @param {type:\"string\"}\n",
     "token = \"\"  # @param {type:\"string\"}\n",
-    "base_url = \"https://dataverse.csuc.cat/\"  # @param {type:\"string\"} \n",
-    "\n",
+    "base_url = \"https://dataverse.csuc.cat/\"  # @param {type:\"string\"}\n",
+    "doi = identifier\n",
     "\n",
     "def extract_value(data_dict):\n",
     "    \"\"\"\n",
@@ -423,7 +423,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "45447f9d",
-   "metadata": {},
+   "metadata": {
+    "id": "45447f9d"
+   },
    "outputs": [],
    "source": []
   }
@@ -447,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
