--- a/REVISAT/REVISAT_script.ipynb
+++ b/REVISAT/REVISAT_script.ipynb
@@ -72,10 +72,11 @@
     "import pprint\n",
     "from IPython.display import HTML, display\n",
     "# Provide input values\n",
-    "doi = \"\"  # @param {type:\"string\"}\n",
+    "identifier = \"\"  # @param {type:\"string\"}\n",
     "token = \"\"  # @param {type:\"string\"}\n",
     "centre= \"\" # @param {type:\"string\"}\n",
     "driver = None ## triar (webdriver.Chrome(), webdriver.Firefox() or None) per evaluar el daset a F-uji. Trieu None si useu l'script a Colab.\n",
+    "doi = identifier \n",
     "def set_css():\n",
     "  display(HTML('''\n",
     "  <style>\n",
