--- a/multiple_datasets_metadata/multiple_datasets_metadata_script.ipynb
+++ b/multiple_datasets_metadata/multiple_datasets_metadata_script.ipynb
@@ -219,7 +219,7 @@
         "    else:\n",
         "        return [], []\n",
         "\n",
-        "def export_metadata(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values, stateDataset):\n",
+        "def export_metadata(base_url, token, doi, data_keys, data_values, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values, stateDataset):\n",
         "    \"\"\"\n",
         "    Function to export metadata from a dataset and store it in respective lists.\n",
         "\n",
@@ -249,8 +249,21 @@
         "    data_api = DataAccessApi(base_url, token)  # Function to access data via the API\n",
         "    try:\n",
         "        dataset = api.get_dataset(doi)  # Retrieve dataset metadata\n",
-        "        # Extract citation metadata if available\n",
         "\n",
+        "      # Extract dataset dates metadata if available\n",
+        "        dataset_data = dataset.json()['data']['latestVersion']  # Extract once\n",
+        "\n",
+        "        date_keys_all = [\n",
+        "            \"publicationDate\", \"lastUpdateTime\", \"releaseTime\",\n",
+        "            \"createTime\", \"productionDate\", \"citationDate\"\n",
+        "        ]\n",
+        "\n",
+        "        for key in date_keys_all:\n",
+        "            if key in dataset_data:\n",
+        "                data_keys.append(key)\n",
+        "                data_values.append(dataset_data[key])\n",
+        "\n",
+        "      # Extract citation metadata if available\n",
         "        if 'citation' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
         "            metadata_citation = dataset.json()['data']['latestVersion']['metadataBlocks']['citation']['fields']\n",
         "            citation = extract_value(metadata_citation)\n",
@@ -331,10 +344,15 @@
         "    except KeyError or InvalidSchema:\n",
         "        print('S\\'ha produït un error en llegir les metadades del conjunt de dades: ' + doi)\n",
         "\n",
-        "def extract_metadata(data, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values):\n",
+        "def extract_metadata(data, data_keys,data_values,citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values):\n",
+        "    for key, value in zip(data_keys, data_values):\n",
+        "        if not isinstance(value, dict):\n",
+        "            data.append([key, value])\n",
+        "\n",
         "    for key, value in zip(citation_keys, citation_values):\n",
         "        if not isinstance(value, dict):\n",
         "            data.append([key, value])\n",
+        "\n",
         "    for key, value in zip(geo_keys, geo_values):\n",
         "        if not isinstance(value, dict):\n",
         "            data.append([key, value])\n",
@@ -378,12 +396,18 @@
         "    'UB', 'UAB', 'UPC', 'UPF', 'UdG', 'UdL', 'URV', 'UOC', 'UVIC-UCC',\n",
         "    'URL', 'UIC', 'UIB', 'Agrotecnio', 'CED', 'CRAG', 'CREAF', 'CRM', 'CTFC',\n",
         "    'i2CAT', 'I3PT', 'IBEC', 'IBEI', 'ICAC-CERCA', 'ICFO-CERCA', 'ICN2',\n",
-        "    'ICRA-CERCA', 'IDIBAPS', 'IDIBELL', 'IDIBGI-CERCA', 'IFAE', 'IJC',\n",
+        "    'ICRA-CERCA', 'IDIBAPS', 'IDIBELL', 'IDIBGI-CERCA', 'IFAE', 'IJC','IRSantPau','CVC','IRSJD',\n",
         "    'IPHES-CERCA', 'IRBBarcelona-CERCA', 'IRB', 'IRSICAIXA', 'IRTA',\n",
         "    'ISGLOBAL', 'VHIR'\n",
         "]\n",
         "\n",
         "# Define metadata categories\n",
+        "data_metadata = {\"publicationDate\":\"Publication Date\",\n",
+        "                 \"createTime\":\"Create Time\",\n",
+        "                 \"lastUpdateTime\":\"Last Update Time\",\n",
+        "                 \"releaseTime\": \"Release Time\",\n",
+        "                 \"productionDate\": \"Production Date\",\n",
+        "                 \"citationDate\": \"Citation Date\" }\n",
         "citation_metadata = {\n",
         "    \"PreviousDatasetPersistentID\": \"Previous Dataset Persistent ID\",\n",
         "    \"title\": \"Title\",\n",
@@ -582,6 +606,59 @@
         "\n",
         "display(instruction_text_institucions, institucions_widget, restart_button_institucions)\n",
         "\n",
+        "###################################################\n",
+        "# DATA METADATA\n",
+        "\n",
+        "# Add an option for selecting all\n",
+        "options_data = ['Totes les metadades'] + list(data_metadata.values())\n",
+        "\n",
+        "# Create widgets for instructions and selections\n",
+        "instruction_text_metadata = widgets.HTML(\n",
+        "    value=\"<b>Trieu alguna metadada de dades:</b>\"\n",
+        ")\n",
+        "\n",
+        "# Create the widget for multiple selection of metadata\n",
+        "metadata_widget = widgets.SelectMultiple(\n",
+        "    options=options_data,\n",
+        "    value=[],\n",
+        "    description='Metadades:',\n",
+        "    disabled=False\n",
+        ")\n",
+        "\n",
+        "# Initialize the global opcions set for institutions and selected metadata set\n",
+        "selected_data = set()\n",
+        "\n",
+        "# Function to save the selected options for metadata\n",
+        "def save_selection_metadata(change):\n",
+        "    global selected_data\n",
+        "    selected = set(change['new'])\n",
+        "\n",
+        "    if 'Totes les metadades' in selected:\n",
+        "        selected_data = set(list(data_metadata.keys()))  # Select all metadata elements if 'Totes les metadades' is chosen\n",
+        "    else:\n",
+        "        # Map the selected display names back to the original metadata keys\n",
+        "        selected_data.update(\n",
+        "            key for key, value in data_metadata.items() if value in selected\n",
+        "        )\n",
+        "\n",
+        "    print(f\"Metadades de dades seleccionades: {list(selected_data)}\")\n",
+        "\n",
+        "# Function to clear the selection and reset the metadata widget\n",
+        "def restart_selection_metadata(button):\n",
+        "    global selected_data\n",
+        "    metadata_widget.value = []  # Clear the selections in the widget\n",
+        "    selected_data.clear()  # Clear the global selected set\n",
+        "    print(\"La selecció de metadades de dades s'ha restablert.\")\n",
+        "\n",
+        "# Observe changes in the widget selection for metadata\n",
+        "metadata_widget.observe(save_selection_metadata, names='value')\n",
+        "\n",
+        "# Create a button to restart the selection for metadata\n",
+        "restart_button_metadata = widgets.Button(description=\"Reinicia la selecció de metadades de dades\")\n",
+        "restart_button_metadata.on_click(restart_selection_metadata)\n",
+        "\n",
+        "# Display the widgets and buttons with instructions\n",
+        "display(instruction_text_metadata, metadata_widget, restart_button_metadata)\n",
         "\n",
         "########################\n",
         "# CITATION METADATA\n",
@@ -916,7 +993,7 @@
       "cell_type": "code",
       "source": [
         "# @title Un cop escollides les institucions i les metadades, ciqueu el botó &#x25B6; per generar el taulell de metadades\n",
-        "selected_metadata = selected_citation | selected_geospatial | selected_social | selected_astronomy | selected_lifesciences | selected_journal\n",
+        "selected_metadata = selected_data | selected_citation | selected_geospatial | selected_social | selected_astronomy | selected_lifesciences | selected_journal\n",
         "metadata_keys_list = []\n",
         "metadata_values_list = []\n",
         "list_doi = []\n",
@@ -930,14 +1007,14 @@
         "        metadata_keys_aux=[]\n",
         "        metadata_values_aux=[]\n",
         "        #  Metadata lists:\n",
-        "        citation_keys, geo_keys,  social_keys, astronomy_keys, biomedical_keys, journal_keys, customUAB_keys, state = [[] for _ in range(8)]\n",
-        "        citation_values, geo_values, social_values, astronomy_values, biomedical_values, journal_values, customUAB_values, state = [[] for _ in range(8)]\n",
+        "        data_keys,citation_keys, geo_keys,  social_keys, astronomy_keys, biomedical_keys, journal_keys, customUAB_keys, state = [[] for _ in range(9)]\n",
+        "        data_values,citation_values, geo_values, social_values, astronomy_values, biomedical_values, journal_values, customUAB_values, state = [[] for _ in range(9)]\n",
         "        data = []\n",
         "        stateDataset = []\n",
         "        # Exporting metadata\n",
-        "        export_metadata(config.get_api_url(), config.get_token(), i, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values, stateDataset)\n",
+        "        export_metadata(config.get_api_url(), config.get_token(), i, data_keys,data_values,citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values, stateDataset)\n",
         "        # Extracting metadata and arranging it\n",
-        "        extract_metadata(data, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values)\n",
+        "        extract_metadata(data, data_keys,data_values,citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, customUAB_keys, customUAB_values)\n",
         "        # Creating a DataFrame\n",
         "        df = pd.DataFrame(data, columns=['Metadata', 'Value'])\n",
         "        metadata_keys_aux = df['Metadata'].tolist()\n",
@@ -1029,7 +1106,7 @@
         "id": "JbvpvPqQPvNP",
         "outputId": "c45e1ad0-de15-41c8-de31-b2e5a955c080"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
