--- a/multiple_datasets_metadata/multiple_datasets_metadata_script.ipynb
+++ b/multiple_datasets_metadata/multiple_datasets_metadata_script.ipynb
@@ -614,7 +614,7 @@
         "\n",
         "# Create widgets for instructions and selections\n",
         "instruction_text_metadata = widgets.HTML(\n",
-        "    value=\"<b>Trieu alguna metadada de dades:</b>\"\n",
+        "    value=\"<b>Trieu alguna metadada de dates:</b>\"\n",
         ")\n",
         "\n",
         "# Create the widget for multiple selection of metadata\n",
