--- a/related_publication_check/related_publication_check_script.ipynb
+++ b/related_publication_check/related_publication_check_script.ipynb
@@ -210,7 +210,7 @@
         "    else:\n",
         "        return [], []\n",
         "\n",
-        "def export_metadata(base_url, token, doi, citation_keys, citation_values, stateDataset):\n",
+        "def export_metadata(base_url, token, doi, citation_keys, citation_values, customUAB_keys, customUAB_values, stateDataset):\n",
         "    \"\"\"\n",
         "    Function to export metadata from a dataset and store it in respective lists.\n",
         "\n",
@@ -242,12 +242,28 @@
         "                    index_change = citation_keys.index(item['typeName'])\n",
         "                    citation_values[index_change] = item['value']\n",
         "\n",
+        "     # Extract Library UAB metadata if available\n",
+        "\n",
+        "        if 'customUAB' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
+        "            metadata_customUAB = dataset.json()['data']['latestVersion']['metadataBlocks']['customUAB']['fields']\n",
+        "            customUAB = extract_value(metadata_customUAB)\n",
+        "            customUAB_keys.extend(customUAB[0])\n",
+        "            customUAB_values.extend(customUAB[1])\n",
+        "            for item in metadata_customUAB:\n",
+        "                if isinstance(item['value'], str):\n",
+        "                    index_change = customUAB_keys.index(item['typeName'])\n",
+        "                    customUAB_values[index_change] = item['value']\n",
+        "\n",
         "    except KeyError or InvalidSchema:\n",
         "        print('S\\'ha produït un error en llegir les metadades del conjunt de dades: ' + doi)\n",
         "\n",
-        "def extract_metadata(data, citation_keys, citation_values):\n",
+        "def extract_metadata(data, citation_keys, citation_values, customUAB_keys, customUAB_values):\n",
         "\n",
         "    for key, value in zip(citation_keys, citation_values):\n",
+        "        if not isinstance(value, dict):\n",
+        "            data.append([key, value])\n",
+        "\n",
+        "    for key, value in zip(customUAB_keys, customUAB_values):\n",
         "        if not isinstance(value, dict):\n",
         "            data.append([key, value])\n",
         "\n",
@@ -336,7 +352,7 @@
       "cell_type": "code",
       "source": [
         "# @title Un cop escollides les institucions i les metadades, ciqueu el botó &#x25B6; per generar el taulell de metadades\n",
-        "selected_metadata = [\"publicationRelationType\",\"publicationCitation\",\"publicationIDType\",\"publicationIDNumber\",\"publicationURL\"]\n",
+        "selected_metadata = [\"publicationRelationType\",\"publicationCitation\",\"publicationIDType\",\"publicationIDNumber\",\"publicationURL\",\"reviewLibrary\"]\n",
         "metadata_keys_list = []\n",
         "metadata_values_list = []\n",
         "list_doi = []\n",
@@ -350,14 +366,14 @@
         "        metadata_keys_aux=[]\n",
         "        metadata_values_aux=[]\n",
         "        #  Metadata lists:\n",
-        "        citation_keys, state = [[] for _ in range(2)]\n",
-        "        citation_values, state = [[] for _ in range(2)]\n",
+        "        citation_keys, customUAB_keys, state = [[] for _ in range(3)]\n",
+        "        citation_values, customUAB_values, state = [[] for _ in range(3)]\n",
         "        data = []\n",
         "        stateDataset = []\n",
         "        # Exporting metadata\n",
-        "        export_metadata(config.get_api_url(), config.get_token(), i, citation_keys, citation_values, stateDataset)\n",
+        "        export_metadata(config.get_api_url(), config.get_token(), i, citation_keys, citation_values, customUAB_keys, customUAB_values, stateDataset)\n",
         "        # Extracting metadata and arranging it\n",
-        "        extract_metadata(data, citation_keys, citation_values)\n",
+        "        extract_metadata(data, citation_keys, citation_values, customUAB_keys, customUAB_values)\n",
         "        # Creating a DataFrame\n",
         "        df = pd.DataFrame(data, columns=['Metadata', 'Value'])\n",
         "        metadata_keys_aux = df['Metadata'].tolist()\n",
@@ -447,9 +463,9 @@
           "height": 17
         },
         "cellView": "form",
-        "outputId": "e61dfac4-373b-43f9-d10e-0fe8a815c61b"
+        "outputId": "5322f439-f0cd-4c78-cc5b-7a7be713a415"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -510,7 +526,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_b40526b8-393a-401a-a789-67a7b4b4ae3d\", \"estudi_publicacio_relacionada.xlsx\", 6435)"
+              "download(\"download_593bd7fd-92cb-477a-935e-2065a4f40189\", \"estudi_publicacio_relacionada.xlsx\", 45103)"
             ]
           },
           "metadata": {}
