--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -773,7 +773,7 @@
         "            cont+=1\n",
         "            f.write(str(cont)+'. Related publication:\\n')\n",
         "            index=[]\n",
-        "            keys=['publicationCitation','publicationIDType','publicationIDNumber','publicationURL']\n",
+        "            keys=[\"publicationRelationType\",'publicationCitation','publicationIDType','publicationIDNumber','publicationURL']\n",
         "            specified_keys = [element for element in keys if element in citation_keys]\n",
         "            extracted_values = find_keys(citation_keys, specified_keys, citation_values)\n",
         "            for entry in extracted_values:\n",
