--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -16,51 +16,12 @@
         "id": "TDTRqrlemlLB"
       },
       "source": [
-        "#### Creating README.txt\n",
-        "# OBSERVATION:\n",
+        "# Creating README.txt\n",
+        "### OBSERVATION:\n",
         "If you have doubts about the code, contact rdr-contacte@csuc.cat\n",
         "\n",
-        "## SCRIPT OBJECTIVE\n",
+        "### SCRIPT OBJECTIVE\n",
         "The main objective of this script is to automatically create the README file for a dataset.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "1Wphbk1gl7Fq"
-      },
-      "outputs": [],
-      "source": [
-        "# @title Install or Update Libraries (Click the &#x25B6; button to execute)\n",
-        "\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
-        "\n",
-        "# Function to install required packages\n",
-        "def install_packages(b):\n",
-        "    \"\"\"\n",
-        "    Function to install or update necessary Python packages.\n",
-        "\n",
-        "    Parameters:\n",
-        "    - b: Button object. Click event handler.\n",
-        "    \"\"\"\n",
-        "    clear_output(wait=True)\n",
-        "    !pip install --upgrade pip -q  # Upgrade pip silently\n",
-        "    !pip install pyDataverse -q  # Install or upgrade pyDataverse silently\n",
-        "    !pip install html2text -q  # Install or upgrade html2text silently\n",
-        "    print(\"Libraries have been downloaded or updated.\")\n",
-        "\n",
-        "# Displaying installation message\n",
-        "display(HTML(\"<p style='font-size:14px;'><b>Click the following button to install the libraries.</b></p>\"))\n",
-        "\n",
-        "# Creating installation button\n",
-        "install_button = widgets.Button(description='Install Libraries')\n",
-        "install_button.on_click(install_packages)\n",
-        "\n",
-        "# Displaying the installation button\n",
-        "display(install_button)\n"
       ]
     },
     {
@@ -72,23 +33,71 @@
       },
       "outputs": [],
       "source": [
-        "# @title Enter DOI (doi:10.34810/dataXXX), API token and the repository URL. Click the &#x25B6; button to execute cell\n",
-        "\n",
+        "# @title  Click the &#x25B6; button to execute cell. Then, enter three last digit of the DOI (doi:10.34810/dataXXX) and API token.\n",
         "import os\n",
-        "from IPython.display import display, FileLink\n",
+        "import subprocess\n",
+        "import sys\n",
+        "# Install libraries if they are not installed already\n",
         "try:\n",
-        "    from google.colab import files\n",
+        "    import pyDataverse\n",
+        "    import html2text\n",
+        "except ImportError:\n",
+        "    print(\"Installing libraries...\")\n",
+        "    install_packages()\n",
+        "\n",
+        "# Function to install required packages\n",
+        "def install_packages():\n",
+        "    \"\"\"\n",
+        "    Function to install or update necessary Python packages.\n",
+        "    \"\"\"\n",
+        "    # Upgrade pip first\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--upgrade\", \"pip\", \"-q\"])\n",
+        "\n",
+        "    # Install the required libraries\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"html2text\", \"-q\"])\n",
+        "\n",
+        "    print(\"Libraries have been downloaded or updated.\")\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "    import google.colab\n",
         "    IN_COLAB = True\n",
         "except ImportError:\n",
         "    IN_COLAB = False\n",
-        "from pyDataverse.api import NativeApi, DataAccessApi\n",
-        "from pyDataverse.models import Dataverse\n",
         "\n",
-        "# Provide input values\n",
-        "identifier = \"\"  # @param {type:\"string\"}\n",
-        "token = \"\"  # @param {type:\"string\"}\n",
-        "base_url = \"\" # @param {type:\"string\"}\n",
-        "doi = identifier\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, FileLink\n",
+        "from google.colab import files\n",
+        "\n",
+        "# Proceed with the rest of the code\n",
+        "from IPython.display import display, HTML\n",
+        "# Prompt user to provide the DOI identifier (only the last three digits)\n",
+        "doi_input = input(\"Please enter the last digits of the DOI (e.g., 'dataXXX'): \")\n",
+        "\n",
+        "# Complete the DOI with the given identifier\n",
+        "doi = f\"doi:10.34810/data{doi_input}\"\n",
+        "\n",
+        "# Ask the user if they need an API token, if so, provide a link\n",
+        "\n",
+        "display(HTML(\"<p style='font-size:14px;'>If you don't have your API token, you can get it from the following link: <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a></p>\"))\n",
+        "\n",
+        "\n",
+        "# Once they have the token, ask for it\n",
+        "token = input(\"Please enter your API token:\")\n",
+        "\n",
+        "# The base URL is always fixed, no need to ask the user\n",
+        "base_url = \"https://dataverse.csuc.cat/\"\n",
+        "\n",
+        "\n",
+        "# You can now initialize the Dataverse API using the provided details\n",
+        "from pyDataverse.api import NativeApi\n",
+        "\n",
+        "# Initialize the Dataverse API\n",
+        "native_api = NativeApi(base_url, token)\n",
+        "\n",
+        "# Further operations like searching or getting metadata can be done below using the API\n",
+        "\n",
         "\n",
         "def extract_value(data_dict):\n",
         "    \"\"\"\n",
@@ -1285,7 +1294,6 @@
         "    print(\"Please enter DOI, Token and URL of the repository correctly.\")\n",
         "else:\n",
         "    api = NativeApi(base_url, token)\n",
-        "    data_api = DataAccessApi(base_url, token)\n",
         "    dataset = api.get_dataset(doi)\n",
         "\n",
         "    #  Metadata lists:\n",
