--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title  Click the &#x25B6; button to execute cell. Then, enter three last digit of the DOI (doi:10.34810/dataXXX) and API token.\n",
+        "# @title  Click the &#x25B6; button to execute cell. Then, enter the three last digits of the DOI (doi:10.34810/dataXXX) and API token.\n",
         "import os\n",
         "import subprocess\n",
         "import sys\n",
