--- a/dataset_size_calculator/dataset_size_calculator.ipynb
+++ b/dataset_size_calculator/dataset_size_calculator.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/dataset_size_calculator/dataset_size_calculator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#### Script per extreure les mides dels datasets d'una instància\n",
         "# OBSERVACIÓ:\n",
@@ -17,55 +27,51 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "DxW5mewck59m"
-      },
-      "outputs": [],
-      "source": [
-        "# @title Instal·leu o actualitzeu les llibreries (feu clic al botó Executar &#x25B6; )\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
-        "\n",
-        "def install_packages(b):\n",
-        "    \"\"\"\n",
-        "    Function to install or update required Python packages.\n",
-        "\n",
-        "    Args:\n",
-        "    b (widget): Button widget that triggers the installation process.\n",
-        "\n",
-        "    Returns:\n",
-        "    None\n",
-        "    \"\"\"\n",
-        "    clear_output(wait=True)\n",
-        "    !pip install --upgrade pip -q  # Upgrade pip silently\n",
-        "    !pip install pyDataverse -q    # Install or update pyDataverse silently\n",
-        "    !pip install requests -q       # Install or update requests silently\n",
-        "    print(\"Les llibreries s'han descarregat o actualitzat correctament.\")\n",
-        "\n",
-        "# Displaying installation message\n",
-        "display(HTML(\"<p style='font-size:14px;'><b>Feu clic al botó següent per instal·lar les llibreries necessàries.</b></p>\"))\n",
-        "\n",
-        "# Creating installation button\n",
-        "install_button = widgets.Button(description='Instal·lar llibreries')\n",
-        "install_button.on_click(install_packages)\n",
-        "\n",
-        "# Displaying the installation button\n",
-        "display(install_button)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "eyQh0bc2nm67",
         "cellView": "form"
       },
       "outputs": [],
       "source": [
         "# @title Feu clic al botó Executar &#x25B6; , ompliu el token i trieu les institucions i les metadades\n",
-        "import subprocess\n",
-        "import smtplib\n",
         "import os\n",
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
+        "\n",
+        "# Function to install required packages\n",
+        "def install_packages():\n",
+        "    \"\"\"\n",
+        "    Function to install or update necessary Python packages.\n",
+        "    \"\"\"\n",
+        "    # Upgrade pip first\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--upgrade\", \"pip\", \"-q\"])\n",
+        "\n",
+        "    # Install the required libraries\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"requests\", \"-q\"])\n",
+        "\n",
+        "    print(\"Libraries have been downloaded or updated.\")\n",
+        "\n",
+        "# Install libraries if they are not installed already\n",
+        "try:\n",
+        "    import pyDataverse\n",
+        "    import html2text\n",
+        "except ImportError:\n",
+        "    print(\"Installing libraries...\")\n",
+        "    install_packages()\n",
+        "\n",
+        "try:\n",
+        "    import google.colab\n",
+        "    IN_COLAB = True\n",
+        "except ImportError:\n",
+        "    IN_COLAB = False\n",
+        "\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, FileLink\n",
+        "from google.colab import files\n",
+        "\n",
+        "\n",
+        "import smtplib\n",
         "from email.mime.multipart import MIMEMultipart\n",
         "from email.mime.base import MIMEBase\n",
         "from email import encoders\n",
@@ -77,7 +83,8 @@
         "from datetime import datetime\n",
         "import pandas as pd\n",
         "import ipywidgets as widgets\n",
-        "from IPython.display import display\n",
+        "from IPython.display import display, HTML\n",
+        "\n",
         "class UtilsConnection:\n",
         "    def __init__(self, config):\n",
         "        self.config = config\n",
@@ -203,7 +210,12 @@
         "logging.basicConfig(level=logging.INFO)\n",
         "logger = logging.getLogger(__name__)\n",
         "\n",
-        "# Ask the user for the token\n",
+        "# Ask the user if they need an API token, if so, provide a link\n",
+        "\n",
+        "display(HTML(\"<p style='font-size:14px;'>If you don't have your API token, you can get it from the following link: <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a></p>\"))\n",
+        "\n",
+        "\n",
+        "# Once they have the token, ask for it\n",
         "token = input(\"Introduïu el vostre token i premeu enter: \")\n",
         "\n",
         "# Use the token in your configuration\n",
@@ -426,7 +438,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
