--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title  Click the &#x25B6; button to execute cell. Then, enter the three last digits of the DOI (doi:10.34810/dataXXX) and API token.\n",
+        "# @title  Click the &#x25B6; button to execute cell. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> Finally enter the LAST DIGITS of the DOI (doi:10.34810/dataXXX).\n",
         "import os\n",
         "import subprocess\n",
         "import sys\n",
@@ -72,19 +72,15 @@
         "\n",
         "# Proceed with the rest of the code\n",
         "from IPython.display import display, HTML\n",
+        "# Once they have the token, ask for it\n",
+        "token = input(\"Please enter your API token:\")\n",
+        "\n",
         "# Prompt user to provide the DOI identifier (only the last three digits)\n",
         "doi_input = input(\"Please enter the last digits of the DOI (e.g., 'dataXXX'): \")\n",
         "\n",
         "# Complete the DOI with the given identifier\n",
         "doi = f\"doi:10.34810/data{doi_input}\"\n",
         "\n",
-        "# Ask the user if they need an API token, if so, provide a link\n",
-        "\n",
-        "display(HTML(\"<p style='font-size:14px;'>If you don't have your API token, you can get it from the following link: <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a></p>\"))\n",
-        "\n",
-        "\n",
-        "# Once they have the token, ask for it\n",
-        "token = input(\"Please enter your API token:\")\n",
         "\n",
         "# The base URL is always fixed, no need to ask the user\n",
         "base_url = \"https://dataverse.csuc.cat/\"\n",
