--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -76,7 +76,7 @@
         "token = input(\"Please enter your API token:\")\n",
         "\n",
         "# Prompt user to provide the DOI identifier (only the last three digits)\n",
-        "doi_input = input(\"Please enter the last digits of the DOI (e.g., 'dataXXX'): \")\n",
+        "doi_input = input(\"Please enter the LAST DIGIT of the DOI (only numbers): \")\n",
         "\n",
         "# Complete the DOI with the given identifier\n",
         "doi = f\"doi:10.34810/data{doi_input}\"\n",
